--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -114,10 +114,11 @@ plex:
   net: host
   hostname: plexmediaserver
   env_file: plex/.env
+  volumes:
+    - /data:/data
   volumes_from:
     - localtime
     - plexdata
-    - /data:/data
   cap_add:
     - NET_ADMIN
     - NET_BROADCAST
