Fix typo in ngrok dockerfile and transmission

--- a/ngrok/Dockerfile
+++ b/ngrok/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get install -y --no-install-recommends unzip wget &&\
     'https://api.equinox.io/1/Applications/ap_pJSFC5wQYkAyI0FIVwKYs9h1hW/Updates/Asset/ngrok.zip?os=linux&arch=amd64&channel=stable' &&\
     unzip -d /usr/local/bin ngrok.zip &&\
     rm -rf ngrok.zip /var/lib/apt/lists/* /tmp/* /var/tmp/*
-ADD config /templates/
+ADD configs /templates/
 ADD scripts/* /usr/local/bin/
 RUN chmod a+rx /usr/local/bin/*
 ENTRYPOINT ["docker-entry"]
