--- a/ngrok/Dockerfile
+++ b/ngrok/Dockerfile
@@ -3,8 +3,8 @@ MAINTAINER Albert Dixon <albert.dixon@schange.com>
 
 RUN apt-get update
 RUN apt-get install -y --no-install-recommends unzip curl &&\
-    curl -#kL \
-    https://api.equinox.io/1/Applications/ap_pJSFC5wQYkAyI0FIVwKYs9h1hW/Updates/Asset/ngrok.zip?os=linux&arch=amd64&channel=stable &&\
+    curl -#kL -o ngrok.zip \
+    'https://api.equinox.io/1/Applications/ap_pJSFC5wQYkAyI0FIVwKYs9h1hW/Updates/Asset/ngrok.zip?os=linux&arch=amd64&channel=stable' &&\
     unzip -d /usr/local/bin ngrok.zip &&\
     rm -rf ngrok.zip /var/lib/apt/lists/* /tmp/* /var/tmp/*
 RUN curl -#kL https://github.com/albertrdixon/tmplnator/releases/download/v1.0.0/tnator-linux-amd64.tar.gz |\
@@ -17,3 +17,4 @@ CMD ["docker-start"]
 
 ENV COUCHPOTATO_PORT 5050
 ENV SICKRAGE_PORT 8081
+ENV PLEX_PORT 32400
