Update btsync url

--- a/btsync/Dockerfile
+++ b/btsync/Dockerfile
@@ -5,7 +5,7 @@ ENV DEBIAN_FRONTEND noninteractive
 
 RUN apt-get update
 RUN apt-get install -y --no-install-recommends curl
-RUN curl -#kL http://download-new.utorrent.com/endpoint/btsync/os/linux-x64/track/stable |\
+RUN curl -#kL https://download-cdn.getsyncapp.com/stable/linux-x64/BitTorrent-Sync_x64.tar.gz |\
     tar xvz -C /usr/local/bin
 RUN curl -#kL https://github.com/albertrdixon/tmplnator/releases/download/v1.0.0/tnator-linux-amd64.tar.gz |\
     tar xvz -C /usr/local/bin
