--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ btsync:
 
 ngrok:
   build: ngrok
-  command: docker-start
+  command: docker-start couchpotato
   env_file: ngrok/.env
   net: host
   hostname: ngrok
