Fix the escarole download

--- a/plex/Dockerfile
+++ b/plex/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get install --no-install-recommends -y --force-yes \
 RUN curl -#kL https://github.com/albertrdixon/tmplnator/releases/download/v2.0.0/tnator-linux-amd64.tar.gz |\
     tar xvz -C /usr/local/bin
 
-RUN curl -#kL https://github.com/albertrdixon/escarole/releases/download/v0.1.0/escarole-linux.tgz |\
+RUN curl -#kL https://github.com/albertrdixon/escarole/releases/download/v0.1.0/escarole-linux.tar.gz |\
     tar xvz -C /usr/local/bin
 
 RUN apt-get autoremove -y && apt-get autoclean -y &&\
