--- a/plex/Dockerfile
+++ b/plex/Dockerfile
@@ -6,7 +6,7 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update -qq
 RUN apt-get install --no-install-recommends -y --force-yes \
     gettext-base curl wget ca-certificates \
-    avahi-daemon avahi-utils supervisor &&\
+    avahi-daemon avahi-utils supervisor
 
 RUN curl -#kL https://github.com/albertrdixon/tmplnator/releases/download/v2.0.0/tnator-linux-amd64.tar.gz |\
     tar xvz -C /usr/local/bin
