--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,7 +90,7 @@ srtransmission:
 cptransmissiondata:
   build: transmission
   entrypoint: /bin/echo
-  command: data for transmission2
+  command: data for cptransmission
   volumes:
     - /transmission
 cptransmission:
@@ -176,9 +176,7 @@ plex:
     - /opt/plex:/plexmediaserver
     - /etc/timezone:/etc/timezone:ro
     - /etc/localtime:/etc/localtime:ro
-  volumes_from:
   cap_add:
     - NET_ADMIN
     - NET_BROADCAST
     - NET_RAW
-
