Streamline these containers a bit

--- a/couchpotato/Dockerfile
+++ b/couchpotato/Dockerfile
@@ -1,12 +1,11 @@
-FROM python:2.7.9
+FROM debian:jessie
 MAINTAINER Albert Dixon <albert.dixon@schange.com>
 
 ENV DEBIAN_FRONTEND noninteractive
-
 RUN apt-get update
-RUN apt-get install -y --no-install-recommends --force-yes \
-    git ca-certificates wget \
-    unar unzip locales curl dnsmasq
+RUN apt-get install -y --no-install-recommends \
+    curl git python locales supervisor \
+    ca-certificates dnsmasq
 
 RUN dpkg-reconfigure locales && \
     locale-gen C.UTF-8 && \
@@ -18,17 +17,7 @@ RUN curl -#kL https://github.com/albertrdixon/tmplnator/releases/download/v2.1.0
 RUN curl -#kL https://github.com/albertrdixon/escarole/releases/download/v0.1.0/escarole-linux.tar.gz |\
     tar xvz -C /usr/local/bin
 
-RUN virtualenv venv
-ADD requirements.txt requirements.txt
-RUN venv/bin/pip install -r requirements.txt && rm requirements.txt
-
 RUN git clone -v git://github.com/RuudBurger/CouchPotatoServer.git /couchpotato
-
-RUN apt-get purge -y --auto-remove \
-    gcc libc6-dev libsqlite3-dev libssl-dev \
-    make xz-utils zlib1g-dev
-RUN apt-get autoremove -y && apt-get autoclean -y &&\
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 ADD bashrc /root/.bashrc
 ADD configs /templates
@@ -45,7 +34,7 @@ EXPOSE 5050
 ENV PATH                 /usr/local/bin:$PATH
 ENV OPEN_FILE_LIMIT      32768
 ENV SUPERVISOR_LOG_LEVEL INFO
-ENV UPDATE_FREQUENCY     86400
+ENV UPDATE_INTERVAL      4h
 ENV COUCHPOTATO_HOME     /couchpotato
 ENV COUCHPOTATO_CHANNEL  master
 ENV CP_DATA_DIR          /data
