--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "transmission"]
 	path = transmission
 	url = https://github.com/albertrdixon/docker-transmission.git
+[submodule "sickrage"]
+	path = sickrage
+	url = https://github.com/albertrdixon/docker-sickrage.git
