--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "couchpotato"]
 	path = couchpotato
 	url = https://github.com/albertrdixon/docker-couchpotato.git
+[submodule "plex"]
+	path = plex
+	url = https://github.com/albertrdixon/docker-plex.git
