--- a/systemd/movie-downloads.service
+++ b/systemd/movie-downloads.service
@@ -11,7 +11,8 @@ StandardError=inherit
 SyslogIdentifier=%p
 ExecStartPre=/usr/bin/docker pull busybox:latest
 ExecStart=/bin/bash -c \
-  "/usr/bin/docker run --name %p \
+  "/usr/bin/docker start %p || \
+  /usr/bin/docker run --name %p \
     --entrypoint /bin/echo \
     --volume /downloads/movies \
     busybox:latest 'Movie downloads'"
