--- a/systemd/plex-data.service
+++ b/systemd/plex-data.service
@@ -13,7 +13,8 @@ StandardError=inherit
 SyslogIdentifier=%p
 ExecStartPre=/usr/bin/docker pull albertdixon/plex:latest
 ExecStart=/bin/bash -c \
-  "/usr/bin/docker run --name %p \
+  "/usr/bin/docker start %p || \
+  /usr/bin/docker run --name %p \
     --entrypoint /bin/echo \
     --volume /plexmediaserver \
     albertdixon/plex:latest 'Data for Plex Media Server'"
