--- a/systemd/couchpotato-data.service
+++ b/systemd/couchpotato-data.service
@@ -11,13 +11,13 @@ TimeoutStartSec=20m
 StandardOutput=journal
 StandardError=inherit
 SyslogIdentifier=%p
-ExecStartPre=/usr/bin/docker pull albertdixon/couchpotato:latest
+ExecStartPre=/usr/bin/docker pull quay.io/albertrdixon/couchpotato:latest
 ExecStart=/bin/bash -c \
   "/usr/bin/docker start %p || \
   /usr/bin/docker run --name %p \
     --entrypoint /bin/echo \
     --volume /data \
-    albertdixon/couchpotato:latest 'Data for Couchpotato'"
+    quay.io/albertrdixon/couchpotato:latest 'Data for Couchpotato'"
 SuccessExitStatus=0 1 2
 Restart=no
 RemainAfterExit=yes
