--- a/systemd/docker-proxy.service
+++ b/systemd/docker-proxy.service
@@ -1,7 +1,8 @@
 [Unit]
 Description=nginx docker proxy
-Requires=docker.service
-After=docker.service
+Wants=docker.service network-online.target
+After=docker.service network-online.target
+Requires=docker.service network-online.target
 
 [Service]
 TimeoutStartSec=20m
@@ -11,9 +12,9 @@ StandardError=inherit
 SyslogIdentifier=%p
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
-ExecStartPre=/usr/bin/docker pull jwilder/nginx-proxy:latest
+ExecStartPre=/bin/bash -c "/usr/bin/docker pull jwilder/nginx-proxy:latest"
 ExecStart=/bin/bash -c \
-  "/usr/bin/docker run --rm --name %p -t \
+  "/usr/local/bin/systemd-docker run --rm --name %p -t \
     -v /var/run/docker.sock:/tmp/docker.sock:ro \
     -p 80:80 jwilder/nginx-proxy:latest"
 ExecStop=/usr/bin/docker stop %p
