--- a/systemd/plex-data.service
+++ b/systemd/plex-data.service
@@ -1,9 +1,10 @@
 [Unit]
 Description=plex media server data
 Documentation=https://plex.tv https://github.com/albertrdixon/docker-plex
-Requires=docker.service
-After=docker.service
+Wants=docker.service network-online.target
+After=docker.service network-online.target
 Before=plex.service
+Requires=docker.service network-online.target
 
 [Service]
 Type=oneshot
@@ -11,7 +12,7 @@ TimeoutStartSec=20m
 StandardOutput=journal
 StandardError=inherit
 SyslogIdentifier=%p
-ExecStartPre=/usr/bin/docker pull albertdixon/plex:latest
+ExecStartPre=/bin/bash -c "/usr/bin/docker pull albertdixon/plex:latest"
 ExecStart=/bin/bash -c \
   "/usr/bin/docker start %p || \
   /usr/bin/docker run --name %p \
