--- a/systemd/cadvisor.service
+++ b/systemd/cadvisor.service
@@ -1,8 +1,9 @@
 [Unit]
 Description=google cadvisor
 Documentation=https://github.com/google/cadvisor
-Requires=docker.service
-After=docker.service
+Wants=docker.service network-online.target
+After=docker.service network-online.target
+Requires=docker.service network-online.target
 
 [Service]
 TimeoutStartSec=20m
@@ -12,9 +13,9 @@ StandardError=inherit
 SyslogIdentifier=%p
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
-ExecStartPre=/usr/bin/docker pull google/cadvisor:latest
+ExecStartPre=/bin/bash -c "/usr/bin/docker pull google/cadvisor:latest"
 ExecStart=/bin/bash -c \
-  "/usr/bin/docker run -t --rm --name %p \
+  "/usr/local/bin/systemd-docker run -t --rm --name %p \
     --volume=/:/rootfs:ro \
     --volume=/var/run:/var/run:rw \
     --volume=/sys:/sys:ro \
