--- a/systemd/couchpotato-transmission-data.service
+++ b/systemd/couchpotato-transmission-data.service
@@ -1,9 +1,10 @@
 [Unit]
 Description=couchpotato transmission data
 Documentation=https://github.com/albertrdixon/docker-transmission
-Requires=docker.service
-After=docker.service
+Wants=docker.service network-online.target 
+After=docker.service network-online.target
 Before=couchpotato-transmission.service
+Requires=docker.service network-online.target
 
 [Service]
 Type=oneshot
@@ -11,7 +12,7 @@ TimeoutStartSec=20m
 StandardOutput=journal
 StandardError=inherit
 SyslogIdentifier=%p
-ExecStartPre=/usr/bin/docker pull quay.io/albertrdixon/transmission:latest
+ExecStartPre=/bin/bash -c "/usr/bin/docker pull quay.io/albertrdixon/transmission:latest"
 ExecStart=/bin/bash -c \
   "/usr/bin/docker start %p || \
   /usr/bin/docker run --name %p \
