--- a/systemd/sickrage-transmission.service
+++ b/systemd/sickrage-transmission.service
@@ -1,8 +1,9 @@
 [Unit]
 Description=torrent client for sickrage with vpn
 Documentation=https://github.com/albertrdixon/docker-transmission
-Requires=docker.service sickrage-transmission-data.service tv-downloads.service
-After=docker.service sickrage-transmission-data.service tv-downloads.service
+Wants=docker.service sickrage-transmission-data.service tv-downloads.service network-online.target
+Requires=docker.service sickrage-transmission-data.service tv-downloads.service network-online.target
+After=docker.service sickrage-transmission-data.service tv-downloads.service network-online.target
 
 [Service]
 TimeoutStartSec=20m
@@ -12,9 +13,9 @@ StandardError=inherit
 SyslogIdentifier=%p
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
-ExecStartPre=/usr/bin/docker pull quay.io/albertrdixon/transmission:latest
+ExecStartPre=/bin/bash -c "/usr/bin/docker pull quay.io/albertrdixon/transmission:latest"
 ExecStart=/bin/bash -c \
-  "/usr/bin/docker run --rm --name %p -t \
+  "/usr/local/bin/systemd-docker run --rm --name %p -t \
     --volumes-from tv-downloads \
     --volumes-from %p-data \
     --volume /etc/timezone:/etc/timezone:ro \
