--- a/systemd/sickrage.service
+++ b/systemd/sickrage.service
@@ -1,8 +1,9 @@
 [Unit]
 Description=tv show downloader
 Documentation=https://www.sickrage.tv/ 
-Requires=docker.service tv-downloads.service sickrage-transmission.service
-After=docker.service tv-downloads.service
+Wants=docker.service tv-downloads.service sickrage-transmission.service network-online.target
+Requires=docker.service tv-downloads.service sickrage-transmission.service network-online.target
+After=docker.service tv-downloads.service network-online.target
 
 [Service]
 TimeoutStartSec=20m
@@ -12,9 +13,9 @@ StandardError=inherit
 SyslogIdentifier=%p
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
-ExecStartPre=/usr/bin/docker pull quay.io/albertrdixon/sickrage:latest
+ExecStartPre=/bin/bash -c "/usr/bin/docker pull quay.io/albertrdixon/sickrage:latest"
 ExecStart=/bin/bash -c \
-  "/usr/bin/docker run --rm --name %p -t \
+  "/usr/local/bin/systemd-docker run --rm --name %p -t \
     --hostname %p \
     --volumes-from tv-downloads \
     --volumes-from %p-data \
