--- a/systemd/plex.service
+++ b/systemd/plex.service
@@ -34,4 +34,4 @@ ExecStop=/usr/bin/docker stop %p
 ExecReload=/usr/bin/docker restart %p
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=media-server.target
