--- a/systemd/sickrage.service
+++ b/systemd/sickrage.service
@@ -30,4 +30,4 @@ ExecStop=/usr/bin/docker stop %p
 ExecReload=/usr/bin/docker restart %p
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=media-ingest.target
