--- a/systemd/sickrage-transmission.service
+++ b/systemd/sickrage-transmission.service
@@ -31,4 +31,4 @@ ExecStop=/usr/bin/docker stop %p
 ExecReload=/usr/bin/docker restart %p
 
 [Install]
-WantedBy=media-ingest.target
+WantedBy=multi-user.target
