--- a/systemd/couchpotato-transmission.service
+++ b/systemd/couchpotato-transmission.service
@@ -15,7 +15,7 @@ ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
 ExecStartPre=/bin/bash -c "/usr/bin/docker pull quay.io/albertrdixon/transmission:latest"
 ExecStart=/bin/bash -c \
-  "/usr/local/bin/systemd-docker run --rm --name %p -t \
+  "/usr/bin/docker run --rm --name %p -t \
     --volumes-from movie-downloads \
     --volumes-from couchpotato-transmission-data \
     --volume /etc/timezone:/etc/timezone:ro \
@@ -27,8 +27,8 @@ ExecStart=/bin/bash -c \
     --env VIRTUAL_PORT=9091 \
     --env-file /etc/sysconfig/%p \
     quay.io/albertrdixon/transmission:latest"
-ExecStop=/usr/bin/docker stop %p
-ExecReload=/usr/bin/docker restart %p
+ExecStop=/bin/bash -c "/usr/bin/docker stop %p"
+ExecReload=/bin/bash -c "/usr/bin/docker restart %p"
 
 [Install]
 WantedBy=multi-user.target
