--- a/systemd/plex.service
+++ b/systemd/plex.service
@@ -16,7 +16,8 @@ ExecStartPre=-/usr/bin/docker rm -f %p
 ExecStartPre=/bin/bash -c "/usr/bin/docker pull albertdixon/plex:latest"
 ExecStart=/bin/bash -c \
   "/usr/bin/docker run --rm --name %p -t \
-    --volumes-from plex-data -v /data:/data \
+    --volumes-from plex-data \
+    --volume /data:/data \
     --volume /etc/timezone:/etc/timezone:ro \
     --volume /etc/localtime:/etc/localtime:ro \
     -p 32400:32400 -p 1900:1900/udp -p 3005:3005 \
